--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^4.2.0"
+    "@types/node": "^20.11.24",
+    "vite": "^4.5.2"
   },
   "dependencies": {
     "@aire-ux/mxgraph": "^4.2.6",
