--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "css": "npx tailwindcss -i ./src/styles/input.css -o ./src/styles/output.css --watch"
   },
   "devDependencies": {
+    "tailwindcss": "^3.4.1",
     "vite": "^4.2.0"
   },
   "dependencies": {
