--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "css": "npx tailwindcss -i ./src/styles/input.css -o ./src/styles/output.css --watch"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
