--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@aire-ux/mxgraph": "^4.2.6",
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.6.0",
     "uuid": "^9.0.1"
   }
